fixed clipping issue with title and character choose

--- a/styles.css
+++ b/styles.css
@@ -191,7 +191,7 @@ body h1 {
 .choose {
     font-size: 3em;
     position: absolute;
-    top: -5%;
+    top: -8%;
     line-height: 60px;
 }
 
